# GaussianGradientsVO

./: CMakeLists.txt  README.md  TUM1.yaml
include/: configuration.h  ggmetrics.h  nlsolver.h  oneframe.h  pose.h  tinterval.h
include/dvo_weight/dvo/core/: weight_calculation.h
include/dvo_weight/dvo/util/: histogram.h
src/: configuration.cpp  ggmetrics.cpp  main.cpp  nlsolver.cpp  oneframe.cpp  pose.cpp  tinterval.cpp
src/dvo_weight/: CMakeLists.txt
src/dvo_weight/src/core/: weight_calculation.cpp  weight_calculation_bk_cpp
src/dvo_weight/src/util/: histogram.cpp
